[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19" }

[dependencies]
async-trait = "0.1.85"
config = { version = "0.15.4" }
dashmap = { version = "6.1.0" }
env_logger = { version = "0.11.6" }
futures = { version = "0.3.31" }
log = { version = "0.4.22" }
metrics = { version = "0.24.1" }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
thiserror = { version = "2.0.10" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"

# Development
tokio-console = { version = "0.1.13", optional = true }
unbug = { version = "0.4.0" }

[[example]]
name = "Sequence"
path = "Example/Sequence.rs"

[[example]]
name = "WorkSteal"
path = "Example/WorkSteal.rs"

[[example]]
name = "Tauri"
path = "Example/Tauri.rs"

[lib]
crate-type = ["rlib"]
name = "Echo"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
description = "📣 Echo —"
license-file = "LICENSE"
name = "Echo"
repository = "https://github.com/CodeEditorLand/Echo"
version = "0.0.1"
edition = "2021"
publish = false
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]

[features]
Development = ["tokio-console"]

default = []
